--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -65,7 +65,7 @@ background-position: 100% 30%;
 }
 
 .PodcastElement__image_container.Nowakowski {
-  background-image: url("../../assets//images/Zygmunt_Nowakowski\ 1\ \(5\).png");
+  background-image: url("../../assets//images/Zygmunt_Nowakowski\ 1.png");
   background-position: 50% 45%;
   background-size: cover;
 }
