--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,7 +13,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   background-color:var(--main_black);
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
 }
 
 body {
