--- a/src/components/podcastsList/podcastsList.module.css
+++ b/src/components/podcastsList/podcastsList.module.css
@@ -40,7 +40,7 @@
   width: 12rem;
   height: 9.5rem;
   margin-top: .5rem;
-  border: 1px solid var(--main_black);
+  border: 1px solid grey;
   border-radius: 1px;
   z-index: 2;
   -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
@@ -75,13 +75,21 @@
   padding: 0 0.5rem;
 }
 
-
-
 .PodcastsList__list li:hover {
   color: var(--main_black);
   cursor: pointer;
   background-color: var(--main_grey);
 }
+
+.Indicator {
+  color: grey;
+  margin-left: 0.35rem;
+  font-weight: 600;
+}
+.PodcastsList__list li:hover .Indicator{
+  color: var(--main_black);
+}
+
 }
 
 
