--- a/src/components/podcastsList/podcastsList.module.css
+++ b/src/components/podcastsList/podcastsList.module.css
@@ -38,10 +38,10 @@
 @media(min-width: 600px){
 .PodcastsList__main.Open {
   width: 12rem;
-  height: 9.5rem;
+  height: 10.5rem;
   margin-top: .5rem;
   border: 1px solid grey;
-  border-radius: 1px;
+  border-radius: 3px;
   z-index: 2;
   -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
@@ -59,8 +59,8 @@
   width: 12rem;
   height: 0rem;
   margin-top: .5rem;
-  border-radius: 1px;
-  bordeR: 1px solid grey;
+  border-radius: 3px;
+  border: 1px solid grey;
   z-index: 2;
   -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
@@ -80,7 +80,7 @@
     height: 0rem;
   }
   100%{
-    heigh: 9.5rem;
+    heigh: 10.5rem;
   }
 }
 @keyframes list_animation{
@@ -88,12 +88,12 @@
     height: 0rem;
   }
   100%{
-    heigh: 9.5rem;
+    heigh: 10.5rem;
   }
 }
 @-webkit-keyframes list_animation_backwards{
   0%{
-    height: 9.5rem;
+    height: 10.5rem;
     border: 1px solid grey;
   }
   100%{
@@ -103,7 +103,7 @@
 }
 @keyframes list_animation_backwards {
   0%{
-    height: 9.5rem;
+    height: 10.5rem;
     border: 1px solid grey;
   }
   100%{
@@ -117,11 +117,12 @@
   display: flex; 
   flex-direction: column;
   width: 100%;
+  height: 100%;
 }
 
 .PodcastsList__list li {
   list-style: none;
-  height: 4rem;
+  height: 4.5rem;
   width: 100%;
   background-color: var(--main_white);
   display: flex;
