modal contact state name changed

--- a/src/components/episodesList/episodesList.module.css
+++ b/src/components/episodesList/episodesList.module.css
@@ -8,40 +8,44 @@
   -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   position: absolute;
+  z-index:1;
   top: 12.95rem;
   right: 1.05rem;
   overflow-y: auto;
   background-color: var(--main_white);
-  animation: aniamation_episodes linear .1s;
-  -webkit-animation: aniamation_episodes ease-in .1s;;
+  animation: aniamation_episodes ease-in .1s forwards;
+  -webkit-animation: aniamation_episodes ease-in .1s forwards;
 }
 
 @keyframes aniamation_episodes{
   0%{
-    top: 8.55rem;
+  top: 8.55rem;
   right: 8.25rem;
+  z-index: 0;
   }
 
   100%{
   top: 12.95rem;
   right: 1.05rem;
+  z-index: 5;
   }
 }
 @-webkit-keyframes aniamation_episodes{
   0%{
     top: 8.55rem;
   right: 8.25rem;
+  z-index: 0;
   }
 
   100%{
   top: 12.95rem;
   right: 1.05rem;
+  z-index: 5;
   }
 }
 
 .List {
  list-style: none;
-
   height: auto;
   display: flex;
   flex-direction: column;
@@ -62,19 +66,27 @@
   font-weight: 500;
 }
 
-.List__element a{
+.List__element_link{
   text-decoration: none;
-  
-  color: grey
-}
-
-.List__element a:hover {
-  color: var(--main_black);
 }
 
 .List__element:hover {
   color: var(--main_black);
   cursor: pointer;
   background-color: var(--main_grey);
+  text-decoration: none;
+}
+
+.List__element_disabled{
+  color: var(--main_grey);
+  padding: 0 .5rem;
+  height: 1.5rem;
+  list-style: none;
+  background-color: var(--main_white);
+  display: flex;
+  justify-content: flex-start;
+  text-decoration: none;
+  font-size: .75rem;
+  font-weight: 500;
 }
 
