--- a/src/components/podcastsList/podcastsList.module.css
+++ b/src/components/podcastsList/podcastsList.module.css
@@ -51,16 +51,27 @@
   right: 8.25rem;
   overflow-y: auto;
   opacity: 1;
-  -webkit-animation: list_animation .2s ease-out;
+  transition: height .3s;
+  -webkit-transition: height .3s;
+  /* -webkit-animation: list_animation .2s ease-out;
   animation: list_animation .2s ease-out;
+} */
+}
+
+.PodcastsList__main.Close{
+  height: 0rem;
+  opacity: 1;
+  transition: height .3s;
+  animation: list_animation_backwards .2s ease-in forwards;
+  -webkit-animation: list_animation_backwards .2s ease-in forwards;
 }
 
 .PodcastsList__main{
   width: 12rem;
-  height: 0rem;
+  height: 0;
   margin-top: .5rem;
-  border-radius: 3px;
   border: 1px solid grey;
+  border-radius: 3px;
   z-index: 2;
   -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
   -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
@@ -69,19 +80,18 @@
   top: 2.5rem;
   right: 8.25rem;
   overflow-y: auto;
-  opacity: 1;
-  animation: list_animation_backwards .2s ease-in forwards;
-  -webkit-animation: list_animation_backwards .2s ease-in forwards;
+  opacity: 0;
 }
 
 
 @-webkit-keyframes list_animation{
   0%{
     height: 0rem;
+    
   }
   100%{
     heigh: 10.5rem;
-  }
+}
 }
 @keyframes list_animation{
   0%{
@@ -94,21 +104,30 @@
 @-webkit-keyframes list_animation_backwards{
   0%{
     height: 10.5rem;
-    border: 1px solid grey;
+    
+  }
+  95%{
+    heigh: 0rem;
+  
   }
   100%{
-    heigh: 0rem;
-    border: 1px solid transparent;
+    
+    display: none;
+    
   }
 }
 @keyframes list_animation_backwards {
   0%{
     height: 10.5rem;
-    border: 1px solid grey;
+    
+  }
+  95%{
+    heigh: 0rem;
+    
   }
   100%{
     heigh: 0rem;
-    border: 1px solid transparent;
+    display: none;
   }
 }
 
