mobile episodes list is openingn

--- a/src/components/episodesList/episodesList.module.css
+++ b/src/components/episodesList/episodesList.module.css
@@ -1,6 +1,6 @@
 .EposidesList__main{
   width: 7.25rem;
-  height: 5rem;
+  height: auto;
   margin-top: .5rem;
   border: 1px solid grey;
   border-radius: 3px;
