--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -1,7 +1,7 @@
 .PodcastElement__main {
   position: relative;
   height: 21rem;
-  width: 13rem;
+  width: 14rem;
   margin-bottom: 2rem;
   border: .25px solid var(--main_grey);
   transition: ease .2s;
@@ -14,7 +14,7 @@
 .PodcastElement__main:hover {
 box-shadow: 0 10px 22px rgba(82, 87, 104, 0.2), 0 5px 18px rgba(86, 91, 105, 0.25);
 transition: ease .25s;
-transform: translateY(-1px);
+/* transform: translateY(-1px); */
 cursor: pointer;
 }
 
@@ -89,8 +89,6 @@ background-position: 100% 30%;
   justify-content: flex-start;
 }
 
-
-
 .Podcast__content_title.Small h5{
   font-size: calc(0.9rem - 25.5%);
   margin: 0 0.5rem 0.5rem 0;
@@ -131,43 +129,59 @@ background-position: 100% 30%;
 
 .PodcastElement__content_listen {
   width: 100%;
+  height: 3rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 1.75rem;
   
 }
-.PodcastElement__content_listen div {
-  width: 65%;
+div.Listen__button {
+  width: 85%;
+  height: 75%;
   display: flex;
   align-items: center;
+  justify-content: space-around;
+  border-radius: 12px;
+  background-color: var(--main_grey);
+  border: 1px solid var(--second_grey); 
+  margin-bottom: 1rem;
+  transition: background-color .2s;
 }
 
-.PodcastElement__content_listen div p {
-  margin: 0 0.5rem 0 0;
-  font-size: .75rem;
+div.Listen__button:hover{
+  background-color: var(--secon_grey);
+  border: 1px solid var(--main_grey); 
+  transition: background-color .2s;
+}
+
+div.Listen__button p {
+  font-size: .85rem;
   font-weight: 500;
-}
-
-.PodcastElement__content_listen svg:nth-of-type(2n) {
-  cursor: pointer;
-}
-
-.PodcastElement__content_listen a {
   margin: 0;
+  color: rgb(85, 85, 85);
+}
+
+
+div.Listen__button a {
   display: flex;
   justify-content: flex-end;
+  margin: 0;
 }
 
 .PodcastElement__content_listen a p {
   text-transform: lowercase;
 }
 
-
-.Headphones__container svg {
-  width: 55%;
-  height: 55%;
-  transform: translateX(77.5%);
+.Headphones__container{
+  height:auto;
+  width: auto;
+}
+ svg.Headphones {
+  width: 1.25rem;
+  height: 1.3rem;
+  cursor: pointer;
+  margin: 0; 
 }
 
 
