--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -147,12 +147,14 @@ div.Listen__button {
   border: 1px solid var(--second_grey); 
   margin-bottom: 1rem;
   transition: background-color .2s;
+  -webkit-transition: background-color .2s;
 }
 
 div.Listen__button:hover{
   background-color: var(--secon_grey);
   border: 1px solid var(--main_grey); 
   transition: background-color .2s;
+  -webkit-transition: background-color .2s;
 }
 
 div.Listen__button p {
