--- a/src/components/authorSection/authorSection.module.css
+++ b/src/components/authorSection/authorSection.module.css
@@ -22,7 +22,8 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  background-color: rgb(246, 246, 246);
+  background-color: rgb(244, 241, 241);
+  border: 1px solid rgb(235, 235, 235);
 }
 
 @media(min-width: 320px){
