--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,12 +1,12 @@
 .Layout__main {
   margin: 0 auto;
-  max-width: 840px;
+  max-width: var(--main_width);
   height: auto;
   background-color: var(--main_white);
 }
 
 .MainSection__ministry {
-  max-width: 840px;
+  max-width: var(--main_width);
   height: 5.5rem;
   background-color: #919BA2;
   z-index: 100;
