--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -16,7 +16,7 @@
 }
 
 .Navigation__container {
-  width: 840px;
+  width: var(--main_width);
   max-width: 100%;
   height: 6.5rem;
   padding: 0 1rem;
@@ -31,7 +31,7 @@
 .Navigation__line {
   position: absolute;
   top: 6.4rem;
-  width: 804px;
+  width: var(--main_width);
   height: 2px;
   margin: 0 auto;
   background: linear-gradient(
@@ -51,7 +51,7 @@
   }
 
   .Navigation__main {
-    width: 840px;
+    width: var(--main_width);
     max-width: 100%;
     height: 6.5;
     box-shadow: none;
@@ -69,7 +69,7 @@
   }
 
   .Navigation__container {
-    width: 840px;
+    width: var(--main_width);
     max-width: 100%;
     height: 100%;
     padding: 0 1rem;
@@ -97,7 +97,7 @@
   .Navigation__line {
     position: absolute;
     top: 6.4rem;
-    width: 804px;
+    width: 884px;
     margin: 0 auto;
     height: 2px;
     background: linear-gradient(
