--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -141,7 +141,7 @@ div.Listen__button {
   height: 75%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   border-radius: 12px;
   background-color: var(--main_grey);
   border: 1px solid var(--second_grey); 
@@ -157,6 +157,10 @@ div.Listen__button:hover{
   -webkit-transition: background-color .2s;
 }
 
+div.Listen__button:hover a{
+  text-decoration: none;
+}
+
 div.Listen__button p {
   font-size: .85rem;
   font-weight: 500;
@@ -166,19 +170,15 @@ div.Listen__button p {
 
 
 div.Listen__button a {
+  width: 75%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin: 0;
+  text-decoration: none;
+
 }
 
-.PodcastElement__content_listen a p {
-  text-transform: lowercase;
-}
 
-.Headphones__container{
-  height:auto;
-  width: auto;
-}
  svg.Headphones {
   width: 1.25rem;
   height: 1.3rem;
