--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -159,6 +159,7 @@ div.Listen__button:hover{
 
 div.Listen__button:hover a{
   text-decoration: none;
+  
 }
 
 div.Listen__button p {
@@ -172,6 +173,7 @@ div.Listen__button p {
 div.Listen__button a {
   width: 75%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   margin: 0;
   text-decoration: none;
@@ -184,6 +186,12 @@ div.Listen__button a {
   height: 1.3rem;
   cursor: pointer;
   margin: 0; 
+}
+
+svg.Wire{
+  height: 0.75rem;
+  width: 2.5rem;
+  transform: translate(32.5%, 7.5%)
 }
 
 
