--- a/src/components/episodesList/episodesList.module.css
+++ b/src/components/episodesList/episodesList.module.css
@@ -17,6 +17,21 @@
   -webkit-animation: aniamation_episodes ease-in .1s forwards; */
 }
 
+.EposidesList__main_mobile {
+  width: 100%;
+  height: auto;
+  margin: 1rem 0;
+  border: 1px solid grey;
+  border-radius: 3px;
+  -webkit-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
+  -moz-box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
+  box-shadow: 10px 14px 11px -4px rgba(125, 125, 125, 0.38);
+  font-size: 0.75rem;
+  color: grey;
+  overflow-y: auto;
+  background-color: var(--main_white);
+}
+
 @keyframes aniamation_episodes{
   0%{
   top: 8.55rem;
@@ -45,13 +60,30 @@
 }
 
 .List {
- list-style: none;
+  list-style: none;
   height: auto;
   display: flex;
   flex-direction: column;
-  
-
 }
+
+.List_mobile {
+  list-style: none;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.List__element_mobile {
+  color: grey;
+  height: 1rem;
+  padding: 0 .5rem;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
 
 .List .List__element{
   padding: 0 .5rem;
@@ -90,3 +122,14 @@
   font-weight: 500;
 }
 
+.List__element_disabled_mobile {
+  color: var(--main_grey);
+  padding: 0 .5rem;
+  height: 1.5rem;
+  list-style: none;
+  background-color: var(--main_white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
