--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -193,6 +193,12 @@ svg.Wire{
   transform: translate(32.5%, 7.5%)
 }
 
+.Dash{
+  color: var(--main_black);
+  font-weight: 100;
+  transform: translate(485%, 5%);
+}
+
 
 @media(max-width: 700px) {
   .PodcastElement__main {
