--- a/src/components/podcastElement/podcastElement.module.css
+++ b/src/components/podcastElement/podcastElement.module.css
@@ -3,7 +3,6 @@
   height: 21rem;
   width: 14rem;
   margin-bottom: 2rem;
-  
   transition: ease .2s;
   background-color: var(--main_white);
   box-shadow: 2px 6px 16px rgba(100,110,140,.15), 1px 4px 6px rgba(100,110,140,.15);
@@ -200,12 +199,13 @@ svg.Wire{
 }
 
 
-@media(max-width: 700px) {
+/* @media(max-width: 700px) {
   .PodcastElement__main {
     width: 14rem;
     height: 19.5rem;
+
   }
-}
+} */
 
 .PodcastElement_unpublished {
   padding: 0 .25rem;
